se resuelve centrado de imagenes

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,10 @@ body,
 #root {
   height: 100%;
 }
+
+.img-centrada {
+  width: 50% !important;
+  display: block !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+}
